# Embedding-MultiAgents

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
doc/instruction/: start_exp.md  start_up.md
doc/scripts/: env_autodl.sh  monitor_repro.sh  reproduce_autodl.sh  run_benchmark.sh  run_llm_smoke.sh  start_up.sh  stop_repro.sh  train_slot_compressor.sh
doc/scripts/aime2025/: run_latent_mas.sh  run_memory_mas.sh
results/hidden_profile/: bottleneck_sweep.json  method_comparison.json
results/multi_agent_reasoning/: aime2024_latent_mas.json  aime2024_slot_d64.json  gsm8k_slot_s4_d64.json  gsm8k_trained_s4_d64.json
results/qasper/: latent_handoff.md  text_handoff.md
results/synthetic/: summary.md
scripts/: install_node_autodl_tmp.sh  run_benchmark.sh  train_slot_compressor.sh
src/LatentMAS/: data.py  memory_bank.py  models.py  prompts.py  run.py  train_compressor.py  train_memory_adapter.py
src/LatentMAS/methods/: latent_mas.py  memory_mas.py  slot_mas.py
src/latent_communication/: README.md  run_experiment.py
src/latent_communication_llm/: README.md  build_main_table.py  compare_text_vs_latent.py  evaluate_auditable_handoff.py  run_hidden_profile.py  run_kvcomm_baseline.py  run_qasper_long_context_eval.py  run_qasper_long_context_latent.py  run_qasper_pilot.py  run_qwen_handoff.py  train_actcomm_baseline.py  train_qasper_long_context_latent_upgrade.py  train_qasper_long_context_residual_latent.py  train_stage4_auditable.py
