[project]
name = "embedding-multiagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
]

# Linux/Windows：从 PyTorch 官方源安装 cu126（CUDA 12.x），避免 PyPI 上 torch 2.11 默认的 CUDA 13 依赖链。
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
